force-app/main/default/objects/Task_Manager__c/Task_Manager__c.object-meta.xml
<CustomObject>
  <label>Task Manager</label>
  <nameField>
    <label>Task Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Task Managers</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>