force-app/main/default/objects/Task_Manager__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
      <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
      <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
      <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>